<resources>
    <string name="app_name">PetShop</string>
    <string name="bordercollie">Border Collie R$800,00</string>
    <string name="pitbull">Pit Bull R$ 750,00</string>
    <string name="pastoralema">Pastor Alemão R$700,00</string>
    <string name="pastorcanadense">Pastor Canadense R$800,00</string>
    <string name="qualcacho">Escolha qual cachorro deseja:</string>
    <string name="check">Femea</string>
    <string name="adestrado">Adestrado</string>
    <string name="vacinas">Com todas as vacinas em dia</string>
    <string name="botao">Calculcar</string>
    <string name="resultado">0.00</string>
</resources>
