<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.fiap.desafio2.rm77273.petshop.MainActivity"
    android:orientation="vertical"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/qualcacho"
        android:textColor="@color/colorAccent"

        />


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
	android:id="@+id/grupo"
        >


    <RadioButton
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cachorro1"
        android:text="@string/bordercollie"
        android:checked="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cachorro2"
        android:text="@string/pitbull"
        />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cachorro3"
        android:text="@string/pastoralema"
        />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cachorro4"
        android:text="@string/pastorcanadense"
        />


</RadioGroup>


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check"
            android:id="@+id/femea"

        />


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adestrado"
        android:id="@+id/adestrado"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vacinas"
        android:checked="true"
        android:id="@+id/vacina"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Calcular"
            android:id="@+id/btncalcular"
                android:onClick="Calcular"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/calculcar"
        android:text="@string/resultado"
        android:textSize="50sp"
        android:layout_gravity="center_horizontal"
        />




</LinearLayout>
